--- a/Final_notebook.ipynb
+++ b/Final_notebook.ipynb
@@ -54,7 +54,8 @@
     "## The goal is to create \n",
     "### -Identify factors used to determine home value\n",
     "### -Build a model to predict home value\n",
-    "### -Minimize Root Square Mean Error (RMSE) in modeling"
+    "### -Minimize Root Square Mean Error (RMSE) in modeling\n",
+    "---"
    ]
   },
   {
@@ -88,52 +89,84 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89eb8d56-4134-48b5-927d-c574b29dc8f4",
+   "cell_type": "markdown",
+   "id": "ed00f06f-8f67-4e19-bcc4-38d7536bcd86",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ea6b63d-9665-4cc7-9175-0806c7a6c933",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# 1. Planning\n",
-    "\n",
-    "##Create deliverables:\n",
-    "README\n",
-    "final_report.ipynb\n",
-    "working_report.ipynb\n",
-    "Build functional wrangle.py, explore.py, and model.py files\n",
-    "Acquire the data from the Code Up database via the wrangle.acquire functions\n",
-    "Prepare and split the data via the wrangle.prepare functions\n",
-    "Explore the data and define hypothesis. Run the appropriate statistical tests in order to accept or reject each null hypothesis. Document findings and takeaways.\n",
-    "Create a baseline model in predicting home cost and document the RSME.\n",
-    "Fit and train three (3) regression models to predict cost on the train dataset.\n",
-    "Evaluate the models by comparing the train and validation data.\n",
-    "Select the best model and evaluate it on the train data.\n",
-    "Develop and document all findings, takeaways, recommendations and next steps."
+    "---"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58245668-a001-4c95-bd65-6bf5008b9bc8",
+   "cell_type": "markdown",
+   "id": "d1b76e1c-02d8-44e2-a7bc-408827c27ff2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 1) Planning\n",
+    "\n",
+    "## a)Create deliverables:\n",
+    "   ### - README\n",
+    "   ### - final_report.ipynb\n",
+    "   ### - working_report.ipynb\n",
+    "\n",
+    "## b) Build functional wrangle.py, explore.py, and model.py files\n",
+    "\n",
+    "## c) Acquire the data from the Code Up database via the wrangle.acquire functions\n",
+    "\n",
+    "## d) Prepare and split the data via the wrangle.prepare functions\n",
+    "\n",
+    "## e) Explore the data and define hypothesis. Run the appropriate statistical tests in order to accept or reject each null hypothesis. Document findings and takeaways.\n",
+    "\n",
+    "## f) Create a baseline model in predicting home cost and document the RSME.\n",
+    "\n",
+    "## g) Fit and train regression models to predict cost on the train dataset.\n",
+    "\n",
+    "## i) Evaluate the models by comparing the train and validation data.\n",
+    "\n",
+    "## j) Select the best model and evaluate it on the train data.\n",
+    "\n",
+    "## k) Develop and document all findings, takeaways, recommendations and next steps."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d849dfc-f134-482d-abd2-3934e2ce5a1f",
+   "cell_type": "markdown",
+   "id": "2ed18613-9fa1-42ec-8b5c-7e24214a9f19",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fc3ae90-b6fc-4623-8160-84a4acb17448",
+   "metadata": {},
+   "source": [
+    "# 2) Data Acquisition\n",
+    "\n",
+    "## In this step, I called my get_zillow_mvp function from wrangle.py. This function:\n",
+    "\n",
+    "### grabs the data from the CodeUp database via a SQL query"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1303ad14-6431-4edb-8644-32b91359f757",
+   "metadata": {},
+   "source": [
+    "## <a name=\"dictionary\"></a>Data Dictionary  \n",
+    "\n",
+    "\n",
+    "### Data Used\n",
+    "---\n",
+    "| Attribute | Definition | Data Type |\n",
+    "| ----- | ----- | ----- |\n",
+    "|Area|The Sqft of the house|int64|\n",
+    "|Bathrooms| The Number of Bathrooms of the house |int64|\n",
+    "|Bedrooms| The Number of Bedrooms of the house |int64 |\n",
+    "|tax_value | The historical Tax Value of the house|int64|\n",
+    "|Sqft|the Sqft of the house broken in to 3 sizes, <1000,<2000,>2000| object|\n",
+    "\n",
+    "***\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -176,14 +209,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3dc819ed-46c2-458f-939a-baeffa130939",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# Acquisition Takeaways\n",
+    "## The zillow data brings in 4 columns of data covering 52,442 homes.\n",
+    "## These homes had transactions during 2017 and are tagged as Single Family Residences.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c59289e8-3ca9-473b-9e85-21ae29dd9b7e",
+   "metadata": {},
+   "source": [
+    "# 3) Data Preparation\n",
+    "## In this step, I called wrangle_zillow from wrangle.py. This function:\n",
+    "\n",
+    "### renames columns\n",
+    "### handles nulls and outliers\n",
+    "### splits data to train, validate, test, x_train, y_train, x_validate, y_validate, x_test, y_test\n",
+    "### makes some lame graphs \n",
+    "---\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "20c1c41c-2865-4e21-b0a2-e7088f3374e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "df=wrangle.wrangle_zillow(df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40932687-a147-4d3e-b3ba-c613d880fbf3",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -245,12 +311,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3890046c-2382-4f3d-a35f-48d80cb9821b",
+   "cell_type": "markdown",
+   "id": "f315e23b-eed2-4e91-afd2-39228fb1e6f4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "# 4) Data Exploration\n",
+    "----"
+   ]
   },
   {
    "cell_type": "code",
@@ -279,6 +347,7 @@
    "id": "a05d7a7f-faac-4ab5-9e92-16e5b68e2b02",
    "metadata": {},
    "source": [
+    "---\n",
     "# Hypothesis\n",
     "\n",
     "## alpha = .05\n",
@@ -325,6 +394,8 @@
    "id": "aa1a093c-89be-4e56-9855-b7d9af682014",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "# Hypothesis\n",
     "\n",
     "## alpha = .05\n",
@@ -370,6 +441,7 @@
    "id": "1f1e0d80-3339-4100-81ed-9b8bafe24eac",
    "metadata": {},
    "source": [
+    "---\n",
     "# Hypothesis\n",
     "\n",
     "## alpha = .05\n",
@@ -411,12 +483,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc527f91-4322-4916-9de3-587917d7c19e",
+   "cell_type": "markdown",
+   "id": "a223d0cf-ab47-46a5-baa5-023941d64339",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "# 5) Modeling\n",
+    "---"
+   ]
   },
   {
    "cell_type": "code",
@@ -451,9 +525,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c97b9f8c-979c-4da6-bdef-a2de9a079c50",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# 6) Conclusion\n",
+    "\n",
+    "## Sqft plays a factor in value\n",
+    "## Number of Bathroom plays a factor in Value\n",
+    "## Number of Bedrooms plays a factor in Value\n",
+    "___"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7767bf10-f76d-4e27-801b-ff281e44cbcf",
+   "id": "e340bddd-acbf-48af-b33e-7a0cc546dac3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -461,7 +549,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e340bddd-acbf-48af-b33e-7a0cc546dac3",
+   "id": "ee128458-7c6a-4bff-b42a-aa1578a3254d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15d691fc-c3fe-4b87-bb8b-c51b2d764f5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16198ced-e613-493c-8e63-e03d2afed005",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a5c509e-df86-4a6c-8c18-94172405d7e4",
    "metadata": {},
    "outputs": [],
    "source": []
